--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -223,7 +223,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="#C5C5C5"
+        android:background="@drawable/border"
         android:gravity="bottom"
         android:scrollbars="vertical"
         android:text="" />
